--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\Coding\\Desktop\\mysql-connector-java-5.1.40-bin.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar-1=lib\\mysql-connector-java-5.1.40-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +45,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
