--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -23,6 +23,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/admin_page.xhtml</welcome-file>
+        <welcome-file>faces/firstUpdateInfo.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
